--- a/app/assets/stylesheets/components/_wrappers.scss
+++ b/app/assets/stylesheets/components/_wrappers.scss
@@ -1,9 +1,8 @@
-.wrapper {
-  margin-top: 100px;
-  width: 900px;
+.main-wrapper {
+  margin: 100px 320px 16px 72px;
 }
 
-.main-wrapper {
+.home-wrapper {
   background-color: $darkblue;
   width: 100vw;
   height: 100vh;
